# python-filestate-php

./: .gitignore  README.md  pyproject.toml
.wex/: config.yml
.wex/python/app_manager/: requirements.txt
src/wexample_filestate_php/config_option/: phpcs_fixer_config_option.py
src/wexample_filestate_php/config_value/: php_config_value.py
src/wexample_filestate_php/const/: php_file.py
src/wexample_filestate_php/file/: php_file.py
src/wexample_filestate_php/option/: php_option.py
src/wexample_filestate_php/option/php/: abstract_php_file_content_option.py  phpcs_fixer_option.py
src/wexample_filestate_php/options_provider/: php_options_provider.py
src/wexample_filestate_php/resources/docker/: .php-cs-fixer.dist.php  Dockerfile.php-option
