[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-filestate-php"
version = "0.0.1"
description = "Helpers for Php."
authors = [
    { name = "weeger", email = "contact@wexample.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2,<3",
    "wexample-filestate==0.0.50",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-filestate-php"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = [
    'src/wexample_filestate-php/*',
]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "wexample_filestate-php"
from = "src"
